<?xml version="1.0"?>
<package>
  <name>intrepid_streaming_msgs</name>
  <version>1.1.1</version>
  <description>The intrepid_streaming_msgs package</description>

  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="pgomez@robotnik.es">Pablo Gomez</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
